--- a/about.html
+++ b/about.html
@@ -32,12 +32,16 @@
                 <ul>
                     <li class="single-info-box">
                         <div class="text-holder">
-                            <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
-                            <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
-                         </div>
+                    <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
+                    <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                 </ul>
+                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    </a>
             </div>
+            </li>
+            </ul>
+        </div>
         </div>
     </header>
     <!--End header area-->
@@ -59,8 +63,10 @@
                             </div>
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
                                     <li class="current"><a href="about.html">About</a></li>
+                                    <li><a href="events.html">Events</a></li>
+                                    <li><a href="activities.html">Activities</a></li>
                                     <!-- <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
@@ -131,12 +137,46 @@
                         <p class="text-justify">
                             Structural Glass Research and Testing (SGRT) Facility, a joint initiative of
                             Indian Institute of Technology (IIT-M) and Glazing Society of India (GSI) is an advanced,
-                            first of its kind facility established at the Structural Engineering laboratory, Department
+                            first-of-its-kind facility established at the Structural Engineering laboratory, Department
                             of Civil Engineering in IIT Madras, Chennai, India. </p>
                         <p class="text-justify">
                             The SGRT facility provides the glazing industry, the construction sector and
                             academic institutions with complete testing facilities for determining, understanding and
                             analyzing the structural characteristics of Glass and Glazing products. </p>
+                    </div>
+                    <br>
+                    <div class="sec-title">
+                        <h1>Professor</h1>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-3">
+                            <div class="img-holder">
+                                <img src="img/team/arul-image.png" width="400" height="500" alt="Awesome Image">
+                            </div>
+                        </div>
+                        <div class="col-md-9 col-sm-9">
+                            <div class="text-holder mt-1">
+                                <h3>Arul S Jayachandran</h3>
+                                <p>Professor, Head of the Laboratory</p>
+                                <p>STR 403, Structural Engineering Laboratory,<br>
+                                    Department of Civil Engineering,
+                                    Indian Institute of Technology Madras,
+                                    Chennai, TN 600036, India</p>
+                                <br>
+                                <h4>Research areas (Prof.)</h4>
+                                <p>Advanced analysis and design of steel structures<br> Computational Structural
+                                    Stability <br>
+                                    Glass Structural Engineering <br>
+                                    Teaching Learning Methods in Engineering</p>
+
+                                <ul>
+                                    <li><span>Tel:</span><a target="_blank" href="tel:914422574292">+91 44 2257 4292</a>
+                                    </li>
+                                    <li><span>Mail:</span><a target="_blank"
+                                            href="mailto:aruls@civil.iitm.ac.in">aruls@civil.iitm.ac.in</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -145,7 +185,7 @@
     <!--End welcome Industry area-->
 
     <!--Start caption area-->
-    <section class="caption-area text-center" style="background-image:url(img/resources/caption-bg.jpg);">
+    <section class="caption-area text-center" style="background-image:url(img/resources/caption-bg.jpg); display: none;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -182,6 +222,7 @@
                             <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                         </ul> -->
+
                     </div>
                 </div>
 
