--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <!-- responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
 
-
 </head>
 
 <body>
@@ -31,14 +30,15 @@
             <div class="top-info pull-right">
                 <ul>
                     <li class="single-info-box">
-                        <div class="text-holder">
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
+                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    </a>
+                    </li>
+                </ul>
             </div>
-            </li>
-            </ul>
-        </div>
         </div>
     </header>
     <!--End header area-->
@@ -60,8 +60,10 @@
                             </div>
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation">
-                                    <li class="current"><a href="index.html">Home</a></li>
+                                    <!-- <li class="current"><a href="index.html">Home</a></li> -->
                                     <li><a href="about.html">About</a></li>
+                                    <li><a href="events.html">Events</a></li>
+                                    <li><a href="activities.html">Activities</a></li>
                                     <!-- <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
@@ -186,7 +188,7 @@
     <!--End rev slider wrapper-->
 
     <!--Start about us area-->
-    <section class="about-us-area">
+    <section style="display: none;" class="about-us-area">
         <div class="outer-box clearfix">
             <div class="image-column" style="background-image:url(img/about/about-image.jpg);">
                 <ul class="icon-box" role="tablist">
@@ -867,61 +869,81 @@
                     <div class="brand">
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/1.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/AIS.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/2.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/BIS.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/3.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/gold-plus.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/4.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/GGG.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/5.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/kalpa.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/6.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/guardian-glass.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/7.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/MIDC.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/8.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/NBCC.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/9.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/reliance.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--Start single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/10.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/S3.jpeg" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/11.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/Saint-Gobain.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                         <!--End single item-->
                         <div class="single-item">
-                            <a href="#"><img src="img/client/12.png" alt="Awesome Brand Image"></a>
+                            <a href="#"><img src="img/partners/TPRS.png" alt="Awesome Brand Image"></a>
+                        </div>
+                        <!--End single item-->
+                        <!--End single item-->
+                        <div class="single-item">
+                            <a href="#"><img src="img/partners/vetro-tech.png" alt="Awesome Brand Image"></a>
+                        </div>
+                        <!--End single item-->
+                        <!--End single item-->
+                        <div class="single-item">
+                            <a href="#"><img src="img/partners/FUSD.png" alt="Awesome Brand Image"></a>
+                        </div>
+                        <!--End single item-->
+                        <!--End single item-->
+                        <div class="single-item">
+                            <a href="#"><img src="img/partners/fg.png" alt="Awesome Brand Image"></a>
+                        </div>
+                        <!--End single item-->
+                        <!--End single item-->
+                        <div class="single-item">
+                            <a href="#"><img src="img/partners/L&T.png" alt="Awesome Brand Image"></a>
                         </div>
                         <!--End single item-->
                     </div>
@@ -990,13 +1012,21 @@
                                 <p class="help-block hidden">Please enter a name 3 characters or more.</p>
                             </div>
                             <div class="form-group" id="id-7">
+                                <label class="control-label" for="id_card">ID Card Number</label>
+                                <div class="input-group">
+                                    <input class="form-control" placeholder="Enter ID Card Number" name="id_card"
+                                        type="text" id="id_card" />
+                                </div>
+                                <p class="help-block hidden">Please enter a name 3 characters or more.</p>
+                            </div>
+                            <!-- <div class="form-group" id="id-7">
                                 <label class="control-label" for="idUpload">ID Upload</label>
                                 <div class="input-group">
                                     <input type="file" class="form-control-file" id="idUpload" onchange="getBaseUrl()"
                                         accept="image/png, image/jpeg">
                                 </div>
                                 <p class="help-block hidden">Please upload the ID Card.</p>
-                            </div>
+                            </div> -->
                             <div class="form-group" id="id-8">
                                 <label class="control-label" for="interestedTopic">Interested Topic</label>
                                 <div class="input-group">
@@ -1417,13 +1447,23 @@
             }
 
             if (modalInputFieldValue[6]) {
-                //validate ID Upload
-                var idUpload = $('#idUpload').val();
-                if (idUpload == null || idUpload == undefined || idUpload == "") {
-                    return showErrorSuccess($('#idUpload'), false);
+                //validate ID Card Number
+                var id_card = $('#id_card').val();
+                if (id_card.length < 3) {
+                    return showErrorSuccess($('#id_card'), false);
                 }
-                showErrorSuccess($('#idUpload'));
+                showErrorSuccess($('#id_card'));
+                requestData.id_card = $('#id_card').val();
             }
+
+            // if (modalInputFieldValue[6]) {
+            //     //validate ID Upload
+            //     var idUpload = $('#idUpload').val();
+            //     if (idUpload == null || idUpload == undefined || idUpload == "") {
+            //         return showErrorSuccess($('#idUpload'), false);
+            //     }
+            //     showErrorSuccess($('#idUpload'));
+            // }
 
             if (modalInputFieldValue[7]) {
                 //validate Interested Topic
