--- a/research-consultancy.html
+++ b/research-consultancy.html
@@ -34,6 +34,9 @@
                         <div class="text-holder">
                             <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                             <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
+                            <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                                <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                            </a>
                          </div>
                     </li>
                  </ul>
@@ -59,8 +62,10 @@
                             </div>
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
                                     <li><a href="about.html">About</a></li>
+                                    <li><a href="events.html">Events</a></li>
+                                    <li><a href="activities.html">Activities</a></li>
                                     <!-- <li class="current dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
