--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -35,6 +35,9 @@
                     <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
                     <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
+                    <a style="padding: 0px 10px" href="https://www.iitm.ac.in/" target="_blank">
+                        <img class="header-image" src="img/project/iitm.png" alt="Awesome Logo">
+                    </a>
             </div>
             </li>
             </ul>
@@ -60,8 +63,10 @@
                             </div>
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
                                     <li><a href="about.html">About</a></li>
+                                    <li><a href="events.html">Events</a></li>
+                                    <li><a href="activities.html">Activities</a></li>
                                     <!-- <li class="dropdown current"><a href="services.html">Services</a>
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
@@ -249,7 +254,7 @@
                                                         <tr>
                                                             <th scope="row">3</th>
                                                             <td>Surface Compression Test</td>
-                                                            <td>Strainoptics Laser GASP</td>
+                                                            <td>Laser GASP</td>
                                                         </tr>
                                                         <tr>
                                                             <th scope="row">4</th>
@@ -259,7 +264,7 @@
                                                         <tr>
                                                             <th scope="row">5</th>
                                                             <td>Roller waviness & Edge Lift Test</td>
-                                                            <td>Strainoptics RWG - D</td>
+                                                            <td>RWG - D</td>
                                                         </tr>
                                                         <tr>
                                                             <th scope="row">6</th>
@@ -313,7 +318,7 @@
                                                         <tr>
                                                             <th scope="row">3</th>
                                                             <td>Surface Compression Test</td>
-                                                            <td>Strainoptics Laser GASP</td>
+                                                            <td>Laser GASP</td>
                                                         </tr>
                                                         <tr>
                                                             <th scope="row">4</th>
@@ -323,7 +328,7 @@
                                                         <tr>
                                                             <th scope="row">5</th>
                                                             <td>Roller waviness & Edge Lift Test</td>
-                                                            <td>Strainoptics RWG - D</td>
+                                                            <td>RWG - D</td>
                                                         </tr>
                                                         <tr>
                                                             <th scope="row">6</th>
